# -Sistema-de-Gerenciamento

./: .gitignore  CMakeLists.txt  README.md  atrizes.csv  codigofont.cpp
data/: atrizes.csv
include/: atriz.hpp
src/: atriz_repository.cpp  main.cpp
